blink: Preserve order in Lifecycle observer iteration

This fixes a bug where the order of scheduled timeouts is reshuffled
during debugging via DevTools, since these timeouts are paused and
unpaused when a breakpoint is reached, and notified about this via a
Lifecycle observer.

I'd like to try replacing the HeapHashSet currently used by Lifecycle
observers with a HeapLinkedHashSet to preserve the observer iteration
order, resolving the problem above. If this turns out to negatively
impact performance elsewhere significantly, we can revert.

Bug: 638255
Change-Id: I5c0be5c2132d3869863e3be6b8913c1f3ea3859f
Reviewed-on: https://chromium-review.googlesource.com/c/1261182
Reviewed-by: Alexander Timin <altimin@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Commit-Queue: Eric Seckler <eseckler@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596619}